--- a/documents/changes.html
+++ b/documents/changes.html
@@ -5,10 +5,10 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8">
-    <meta name="description" content="Project documents" />
-    <meta name="author" content="H&aring;vard, Petter, Runar, Thomas" />
+    <meta name="description" content="Changes" />
+    <meta name="author" content="H&aring;vard, Runar, Petter, Thomas" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Project Documents</title>
+    <title>Changes</title>
     <!-- Style normalizer: Normalize.css -->
     <link rel="stylesheet" type="text/css" href="style/normalize.css" />
     <!-- Website style -->
@@ -20,21 +20,21 @@
   <body>
     <div class="outer-container">
       <div class="banner">
-        <p class="banner-title"><a href="#">Project Documents</a></p>
+        <p class="banner-title"><a href="#">Changes</a></p>
         <p class="banner-sub-title">H&aring;vard, Petter, Runar, Thomas</p>
         <p class="banner-date">Autumn 2016</p>
       </div>
 
       <div class="inner-container">
         <main>
-         <section id="documents">
+          <section id="changes">
             <header>
-              <h1><a href="#documents">Documents</a></h1>
+              <h1><a href="#changes">Changes</a></h1>
             </header>
 
-            <p><a href="p1_requirements.html">P1: Project Requirements</a></p>
-            <p><a href="p2_design.html">P2: Project Design</a></p>
-            <p><a href="changes.html">Changes</a></p>
+            <ul>
+              <li>[09.10.2016] Nothing yet.</li>
+            </ul>
           </section>
         </main>
       </div>
