P2_Design Minimum Requirements Update
Noen som kan se over?

--- a/documents/p2_design.html
+++ b/documents/p2_design.html
@@ -175,18 +175,9 @@
               <h1><a href="#content">Content</a></h1>
             </header>
 
-            <p>This is the longest section of your document. For every page, you will need to give
-            a text description of the content of the page as well as an image of the mockup of the page.
-            The text describes what goal(s) this page fulfills, and how design decisions specific to it
-            contribute into fulfilling such goals. The reason why you should describe the content is that
-            you might not have yet received the actual content from the client and in your mockup of the
-            page you will be using fake text, fake images, etc. While the content can be fake, you should
-            try to use meaningful headings and captions to convey its meaning. Finally you should
-            describe the design decisions that are unique for this particular page (if any).</p>
-            <p></p>
-            <p>Every page of the website will have the same top with logo, dropdown,breadcrumps, and the sides, bottom will also be the same</p>
-            <p>The middlepart will be build up of a Title(Part, Part Vendors..) and a Subtitle(Motherboard, RAM...), down the site we will have inforamtion about what the Subtitle refers to, together with pictures and videos if time,</p>
-            <p>This describes the Subpages, the mainpage will be different. The mainpage will have information about the page it self, guides how to use it (the use of the dropdown menu), what the goal of the webpage is, any function we have implemented (highlightning of link elements, search function), and last some information about ourself</p>
+            <p>The home page will contain information about the site it self. The structure of the website, what the goal of the website is, how the website will obtain this goal, the different functions you can use on the site (quizes after subpages, search function), and at the end inforamtion about the creators of the page, ourself.</p>
+	    <p>The subpages will contain inforamtion about PC parts, different PC parts makers, Operating Systems, how to build a PC. where everyone have their subpages again that goes more indept. At the end of the subpages we will have a short quiz that ask questions about what the readers have read and checks if the reader have learned something or if he has the reread it. Complementing the informaion we will have pictures that will help, we will link the text and coresponding pictures with highlightning</p>
+            <p>Every page of the website will have the same top with logo and the dropdown, the sides will be the same, bottom will also be the same, the subpages also will have breadcrumps</p>
           </section>
 
           <hr />
@@ -195,14 +186,22 @@
             <header>
               <h1><a href="#min_req">Minimum Requirements</a></h1>
             </header>
-
-            <p>1. AJAX, for updating the page without reloading the whole page</p>
-            <p>2. Some sort of testvalidation after each part, to see if the reader has learned anything, and of they have to read something again.</p>
-            <p>3. Highlightning elements that is linked to eachother, like text of exemple1 and the pictre of exemple2, where if you hover over 1 you will highlight the other</p>
-            <p>4. Set beginner mode or expert mode, change the content of the page depending of mode. Showing more indeept content for expert and hiding it for beginner</p>
-            <p>5. Search on webpage with auto complete</p>
-            <p>6. Dynamic breadcrumps</p>
-            <p>Clearly indicate how each of you will be fulfilling these minimum requirements. ??</p>
+	    <p>For fullfing the requirements for the project we have found 6 uses of JavaScript we will implement. The list and a short description of the function can use see underneath.</p>
+	    <ol>
+                <li>AJAX, for updating the page without reloading the whole page.</li>
+                <li>Validation of quiz at the end of the subpages, to see if the reader has learned anything, and of they have to reread something again.</li>
+                <li>Highlightning elements that is linked to eachother, like text of exemple1 and the pictre of exemple1, where if you hover over 1 you will highlight the other.</li>
+                <li>Set beginner mode or expert mode, change the content of the page depending of mode. Showing more indeept content for expert and hiding it for beginner.</li>
+                <li>Front end search on webpage with auto complete, showing results from the webpage.</li>
+                <li>Dynamic breadcrumps.</li>
+            </ol>
+	    <p>All of us have been given 1-2 of this JavaScripts to make.</p>
+	    <p>AJAX we must set what we will have as static elements on the page, and what parts we will have dynamic.</p>
+	    <p>The validation of the quizes will be solved with having a form with the answers and check that up agains what the vistors have answered, updating the site with Javascript with the results, no popups.</p>
+	    <p>Highlightning require we give correct classes for elements, and when you hover over one Javascript will go over the page find more and update the site seamlessly with the new elements highlighted</p>
+	    <p>For Beginner/Expert mode we have to create differnet/more content that will be changed/added depending of a settning we will have on the page</p>
+	    <p>Search function must go throug every subpage and match its content with the search term and give the vistor a link to the subpage and placment on the page for the found term.</p>
+	    <p>Will update depending on subpages name, and remove add as the vistor moves.</p>
           </section>
 
           <hr />
