P2_Desgin "Plan" Update

--- a/documents/p2_design.html
+++ b/documents/p2_design.html
@@ -201,7 +201,7 @@
 	    <p>Highlightning require we give correct classes for elements, and when you hover over one Javascript will go over the page find more and update the site seamlessly with the new elements highlighted</p>
 	    <p>For Beginner/Expert mode we have to create differnet/more content that will be changed/added depending of a settning we will have on the page</p>
 	    <p>Search function must go throug every subpage and match its content with the search term and give the vistor a link to the subpage and placment on the page for the found term.</p>
-	    <p>Will update depending on subpages name, and remove add as the vistor moves.</p>
+	    <p>Breadcrumps will update depending on subpages name, and remove add as the vistor moves.</p>
           </section>
 
           <hr />
@@ -211,33 +211,20 @@
               <h1><a href="#plan">Plan</a></h1>
             </header>
 
-            <p>Provide a clear, specific description of your plan for building the site. Outline the tasks
-      to be accomplished, the deadlines for those tasks, and who is responsible for them. Include a
-      list of files and folders, which will help each partner link to files her partner has built. Include a
-      complete list of everything you need to get from your client (text, pictures, sound, etc.) and
-      when you expect to get them. To the greatest extent you can, try to have all of these things by
-      the time your design is done, so that nothing will delay your coding.</p>
-
       <p>The most important things we have to build is the dropdown menu, breadcrumps, search function and AJAX this functions is what the user will experience the most and will give the best experience of the webpage</p>
       <p>We most not forget that the actual text content have to be written, this will take a lot of time to compile together</p>
-      <p>List of placement of files and folders</p>
-      <p>main level: file: index.html, folders: documents, favicon, images, style, javascript.
-      <p>Documents: Any documents required for the project</p>
-      <p>favicon: This one explain it self</p>
-      <p>Images: Contains folders: logo, parts, website. Where the folder "logo" contains the logos for our website, "parts" contains pictures of the parts we include on our webpage, "website" contains every other element we use on our webpage, main level on this folder will also include elements the webpage is made of</p>
-      <p>Style: will contain any css stylesheets we create</p>
-      <p>JavaScript: will contain any javascrips we create</p>
       <p>Petter and Thomas have to get the pictures of the parts before we start the coding, Petter will get all the pictures of parts required to build a pc before 14.10 if the mail dont screw up. Thomas will help with the taking of them</p>
-      <p>Runar will get the logos, backgrounds and other elements required for the webpage finished by XX.XX WE NEED TIME</p>
-      <p>Everyone will help with the JavaScript, CSS, HTML, and get it fini by XX.XX WE NEED TIME</p>
+      <p>Runar will get the logos, backgrounds and other elements required for the webpage finished by 01.11</p>
+      <p>Everyone will help with the JavaScript, CSS, HTML, and get it finished by 01.11</p>
       <p>JavaScripts needed are AJAX, Highlightning, beginner/expert mode, search function, dynamic breadcrumps, testformvalidation</p>
-      <p>Håvard need to finish AJAX by XX.XX</p>
-      <p>Petter need to finish search function by XX.XX</p>
-      <p>Runar need to finish Highlightning by XX.XX</p>
-      <p>Thomas need to finish dynamic breadcrumps by XX.XX</p>
-      <p>Petter need to finish testformvalidation (=quiz? -Håvard) (Ja tenke at leseren kan teste seg selv om han fikk med seg hva han akkurat har lest, noe i den dur, tenke på deg førre vi hadde 4 Javascript)
-	  by XX.XX</p>
-      <p>Thomas need to finish beginner/expert mode by XX.XX</p>
+      <p>Håvard need to finish AJAX by 01.11</p>
+      <p>Petter need to finish search function by 01.11</p>
+      <p>Runar need to finish Highlightning by 01.11</p>
+      <p>Thomas need to finish dynamic breadcrumps by 01.11</p>
+      <p>Petter need to finish the validation of quiz by 01.11</p>
+      <p>Thomas need to finish beginner/expert mode by 01.11</p>
+      <p>We have set every deadline to 01.11 because then we will have 12 days before the project should be finished for adjusments and eventual changes to be made. When we have set every deadline to 01.11 will also have a choose about what we will begin with, instead of work with what has the earliest deadline. We will off course have meetings in the meantime where we will see how far we have gotten</p>
+      <p>For list of files and folders see "File Navigation Structure" section.</p>
           </section>
         </main>
       </div>
