P2_Design "plan" updated
Added list of files needed to be created

--- a/documents/p2_design.html
+++ b/documents/p2_design.html
@@ -225,6 +225,13 @@
       <p>Thomas need to finish beginner/expert mode by 01.11</p>
       <p>We have set every deadline to 01.11 because then we will have 12 days before the project should be finished for adjusments and eventual changes to be made. When we have set every deadline to 01.11 will also have a choose about what we will begin with, instead of work with what has the earliest deadline. We will off course have meetings in the meantime where we will see how far we have gotten</p>
       <p>For list of files and folders see "File Navigation Structure" section.</p>
+	  <p>List of files needed to be created</p>
+	  <ul>
+		<li>JavaScripts, 6 of them for each function when developing, 1 file when we are finished</li>
+		<li>Content files, text files containing all of the information about the parts, vendors, operating systems, and how to build the pc</li>
+		<li>HTML files for every subpage need to be created</li>
+		<li>Jpgs of the parts, build procsess need to be taken</li>
+	  </ul>
           </section>
         </main>
       </div>
