--- a/index.html
+++ b/index.html
@@ -37,40 +37,49 @@
 
     <div class="site-center-container">
       <div class="site-center">
-        <div class="navbar-container">
-          <div class="navbar">
-            <ul>
-              <li class="dropdown">
-                <a href="#" class="dropbutton">Parts</a>
-                <div class="dropdown-content">
-                  <a href="#">Motherboard and CPU</a>
-                  <a href="#">RAM and GPU</a>
-                  <a href="#">Storage, network card, sound card</a>
-                  <a href="#">Cooling, PSU, case</a>
-                  <a href="#">Accessories</a>
-                </div>
-              </li>
+        <div class="navbar">
+          <ul>
+            <li class="dropdown">
+              <a href="#" class="dropbutton">Parts</a>
+              <div class="dropdown-content">
+                <a href="#">Motherboard and CPU</a>
+                <a href="#">RAM and GPU</a>
+                <a href="#">Storage, network card, sound card</a>
+                <a href="#">Cooling, PSU, case</a>
+                <a href="#">Accessories</a>
+              </div>
+            </li>
 
-              <li><a href="#">Part vendors</a></li>
+            <br class="one" />
 
-              <li class="dropdown">
-                <a href="#" class="dropbutton">Operating Systems</a>
-                <div class="dropdown-content">
-                  <a href="#">Windows</a>
-                  <a href="#">Linux</a>
-                  <a href="#">Macintosh</a>
-                </div>
-              </li>
+            <li class="dropdown">
+              <a href="#" class="dropbutton">Part Vendors</a>
+              <div class="dropdown-content">
+                <a href="#">Part Vendors</a>
+              </div>
+            </li>
 
-              <li class="dropdown">
-                <a href="#" class="dropbutton">Assembling the PC</a>
-                <div class="dropdown-content">
-                  <a href="#">Hardware</a>
-                  <a href="#">Software</a>
-                </div>
-              </li>
-            </ul>
-          </div>
+            <br class="two" />
+
+            <li class="dropdown">
+              <a href="#" class="dropbutton">Operating Systems</a>
+              <div class="dropdown-content">
+                <a href="#">Windows</a>
+                <a href="#">Linux</a>
+                <a href="#">Macintosh</a>
+              </div>
+            </li>
+
+            <br class="three" />
+
+            <li class="dropdown">
+              <a href="#" class="dropbutton">Assembling the PC</a>
+              <div class="dropdown-content">
+                <a href="#">Hardware</a>
+                <a href="#">Software</a>
+              </div>
+            </li>
+          </ul>
         </div>
 
         <div class="breadcrumbs">
@@ -146,7 +155,7 @@
             </ul>
           </div>
 
-          <p class="copyright">Copyright &copy; 2016 github.com/build-a-pc</p>
+          <p class="copyright">Copyright &copy; 2016 <a href="https://github.com/build-a-pc">github.com/build-a-pc</a></p>
         </div>
       </div>
     </div>
