Changed paths to relative

--- a/index.html
+++ b/index.html
@@ -8,30 +8,30 @@
     <title>Build-a-PC</title>
 
     <!-- Scripts -->
-    <script src="/scripts/ajax.js" defer></script>
-    <script src="/scripts/breadcrumbs.js" defer></script>
-    <script src="/scripts/search.js" defer></script>
-    <script src="/scripts/highlighting.js" defer></script>
-    <script src="/scripts/beginner_expert.js" defer></script>
-    <script src="/scripts/search.js" defer></script>
+    <script src="scripts/ajax.js" defer></script>
+    <script src="scripts/breadcrumbs.js" defer></script>
+    <script src="scripts/search.js" defer></script>
+    <script src="scripts/highlighting.js" defer></script>
+    <script src="scripts/beginner_expert.js" defer></script>
+    <script src="scripts/search.js" defer></script>
 
     <!-- Style normalizer: Normalize.css -->
-    <link rel="stylesheet" href="/style/normalize.css" />
+    <link rel="stylesheet" href="style/normalize.css" />
     <!-- Website style -->
-    <link rel="stylesheet" href="/style/site.css" />
+    <link rel="stylesheet" href="style/site.css" />
     <!-- Fonts -->
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto|Roboto+Mono|Roboto+Slab">
 
     <!-- Favicon and stuff -->
-    <link rel="apple-touch-icon" sizes="180x180" href="/favicon/apple-touch-icon.png">
-    <link rel="icon" type="image/png" href="/favicon/favicon-32x32.png" sizes="32x32">
-    <link rel="icon" type="image/png" href="/favicon/favicon-16x16.png" sizes="16x16">
-    <link rel="manifest" href="/favicon/manifest.json">
-    <link rel="mask-icon" href="/favicon/safari-pinned-tab.svg" color="#cc0000">
-    <link rel="shortcut icon" href="/favicon/favicon.ico">
+    <link rel="apple-touch-icon" sizes="180x180" href="favicon/apple-touch-icon.png">
+    <link rel="icon" type="image/png" href="favicon/favicon-32x32.png" sizes="32x32">
+    <link rel="icon" type="image/png" href="favicon/favicon-16x16.png" sizes="16x16">
+    <link rel="manifest" href="favicon/manifest.json">
+    <link rel="mask-icon" href="favicon/safari-pinned-tab.svg" color="#cc0000">
+    <link rel="shortcut icon" href="favicon/favicon.ico">
     <meta name="apple-mobile-web-app-title" content="Build-a-PC">
     <meta name="application-name" content="Build-a-PC">
-    <meta name="msapplication-config" content="/favicon/browserconfig.xml">
+    <meta name="msapplication-config" content="favicon/browserconfig.xml">
     <meta name="theme-color" content="#ffffff">
   </head>
 
@@ -39,8 +39,8 @@
     <div class="site-container">
     <div class="site-header-container">
       <div class="site-header">
-        <img class="site-header-logo" src="/images/logo.gif" alt="logo" />
-        <p class="site-header-title"><a href="/">Build-a-PC</a></p>
+        <img class="site-header-logo" src="images/logo.gif" alt="logo" />
+        <p class="site-header-title"><a href=".">Build-a-PC</a></p>
         <p class="site-header-sub-title">by Ad Infinitum</p>
       </div>
     </div>
@@ -107,12 +107,12 @@
             </header>
 
             <figure class="float-right" onclick="this.className += ' spin'">
-              <img src="/images/logo/logo_256.gif" />
+              <img src="images/logo/logo_256.gif" />
               <figcaption>Figure test</figcaption>
             </figure>
 
             <figure class="float-right">
-              <img class="spin" src="/images/loading.png" />
+              <img class="spin" src="images/loading.png" />
               <figcaption>Loading</figcaption>
             </figure>
 
