--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
         <div class="navbar">
           <ul>
             <li class="dropdown">
-              <a href="#" class="dropbutton">Parts</a>
+              <a href="?section=parts" class="dropbutton">Parts</a>
               <div class="dropdown-content">
                 <a href="#">Motherboard and CPU</a>
                 <a href="#">RAM and GPU</a>
@@ -63,7 +63,7 @@
             <br class="one" />
 
             <li class="dropdown">
-              <a href="#" class="dropbutton">Part Vendors</a>
+              <a href="?section=vendors" class="dropbutton">Part Vendors</a>
               <div class="dropdown-content">
                 <a href="#">Part Vendors</a>
               </div>
@@ -72,7 +72,7 @@
             <br class="two" />
 
             <li class="dropdown">
-              <a href="#" class="dropbutton">Operating Systems</a>
+              <a href="?section=oss" class="dropbutton">Operating Systems</a>
               <div class="dropdown-content">
                 <a href="#">Windows</a>
                 <a href="#">Linux</a>
@@ -83,7 +83,7 @@
             <br class="three" />
 
             <li class="dropdown">
-              <a href="#" class="dropbutton">Assembling the PC</a>
+              <a href="?section=assembly" class="dropbutton">Assembling the PC</a>
               <div class="dropdown-content">
                 <a href="#">Hardware</a>
                 <a href="#">Software</a>
@@ -100,53 +100,7 @@
           </ul>
         </div>
 
-        <main class="content">
-          <section id="wip">
-            <header>
-              <h1><a href="#wip">Work In Progress</a></h1>
-            </header>
-
-            <figure class="float-right" onclick="this.className += ' spin'">
-              <img src="images/logo/logo_256.gif" />
-              <figcaption>Figure test</figcaption>
-            </figure>
-
-            <figure class="float-right">
-              <img class="spin" src="images/loading.png" />
-              <figcaption>Loading</figcaption>
-            </figure>
-
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis vitae turpis neque.
-              Curabitur malesuada sollicitudin ligula id cursus. Integer in iaculis ante, vitae porta neque.
-              Integer porttitor nibh non auctor elementum.
-              Sed posuere lectus purus, sit amet interdum sapien ultricies a.
-              Aliquam viverra pharetra tincidunt. Donec nec ante rhoncus, aliquet quam ut, gravida mauris.
-              Praesent eros magna, ullamcorper id maximus varius, venenatis in lorem.
-              Vestibulum tempus blandit nisi, eu bibendum massa ultrices at.
-              In facilisis, tellus eget vestibulum auctor, sem enim mattis justo, eu laoreet elit purus eget velit.
-              Donec sem tortor, sagittis sed dictum convallis, molestie in dui. Nam pretium tempor lobortis.
-              Sed hendrerit nulla quis neque iaculis posuere. Duis eget placerat sem, sit amet cursus mauris.
-              Aliquam tristique, ex nec accumsan ornare, mi nibh condimentum est, a venenatis sapien nisi in tortor.
-              Sed molestie, odio rhoncus scelerisque accumsan, dui dui euismod dolor, at porta eros magna nec erat.</p>
-
-            <div class="code">
-              <p>Code test</p>
-              <p>1234<p/>
-            </div>
-          </section>
-
-          <hr />
-
-          <section id="more">
-            <header>
-              <h1><a href="#more">More!</a></h1>
-            </header>
-
-            <ul>
-              <li>More</li>
-            </ul>
-          </section>
-        </main>
+        <main id="content" />
       </div>
     </div>
       <div class="site-footer-container">
