--- a/pages/assembly/assembly.inc.html
+++ b/pages/assembly/assembly.inc.html
@@ -2,11 +2,14 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8">
-    <!-- Page info below -->
     <meta name="description" content="Assembling the PC" />
     <meta name="author" content="Ad Infinitum" />
     <meta name="section" content="assembly" />
     <meta name="page" content="assembly" />
+    <meta name="section_name" content="Assembling the PC" />
+    <meta name="page_name" content="Assembling the PC" />
+    <meta name="show_navbar" content="true" />
+    <meta name="show_navbar_page" content="false" />
     <title>Assembling the PC</title>
   </head>
 
