--- a/pages/home.inc.html
+++ b/pages/home.inc.html
@@ -2,11 +2,14 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8">
-    <!-- Page info below -->
     <meta name="description" content="Home" />
     <meta name="author" content="Ad Infinitum" />
     <meta name="section" content="" />
     <meta name="page" content="home" />
+    <meta name="section_name" content="" />
+    <meta name="page_name" content="Home" />
+    <meta name="show_navbar" content="false" />
+    <meta name="show_navbar_page" content="false" />
     <title></title>
   </head>
 
