--- a/pages/oss/oss.inc.html
+++ b/pages/oss/oss.inc.html
@@ -2,11 +2,14 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8">
-    <!-- Page info below -->
     <meta name="description" content="Operating Systems" />
     <meta name="author" content="Ad Infinitum" />
     <meta name="section" content="oss" />
     <meta name="page" content="oss" />
+    <meta name="section_name" content="Operating Systems" />
+    <meta name="page_name" content="Operating Systems" />
+    <meta name="show_navbar" content="true" />
+    <meta name="show_navbar_page" content="false" />
     <title>Operating Systems</title>
   </head>
 
