--- a/pages/parts/parts.inc.html
+++ b/pages/parts/parts.inc.html
@@ -2,11 +2,14 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8">
-    <!-- Page info below -->
     <meta name="description" content="Parts" />
     <meta name="author" content="Ad Infinitum" />
     <meta name="section" content="parts" />
     <meta name="page" content="parts" />
+    <meta name="section_name" content="Parts" />
+    <meta name="page_name" content="Parts" />
+    <meta name="show_navbar" content="true" />
+    <meta name="show_navbar_page" content="false" />
     <title>Parts</title>
   </head>
 
