--- a/pages/template.inc.html
+++ b/pages/template.inc.html
@@ -2,11 +2,14 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8">
-    <!-- Page info below -->
     <meta name="description" content="About this page" />
     <meta name="author" content="For eksempel H&aring;vard" />
     <meta name="section" content="random_section" />
     <meta name="page" content="random_page" />
+    <meta name="section_name" content="Random Section" />
+    <meta name="page_name" content="Random Page" />
+    <meta name="show_navbar" content="true" />
+    <meta name="show_navbar_page" content="true" />
     <title>Page Template</title>
   </head>
 
