Renamed some vars and added local hosting instructions

--- a/pages/assembly/assembly.inc.html
+++ b/pages/assembly/assembly.inc.html
@@ -8,8 +8,8 @@
     <meta name="page" content="assembly" />
     <meta name="section_name" content="Assembling the PC" />
     <meta name="page_name" content="Assembling the PC" />
-    <meta name="show_navbar" content="true" />
-    <meta name="show_navbar_page" content="false" />
+    <meta name="show_breadcrumbs" content="true" />
+    <meta name="show_page_breadcrumbs" content="false" />
     <title>Assembling the PC</title>
   </head>
 
