--- a/pages/error/404.inc.html
+++ b/pages/error/404.inc.html
@@ -8,8 +8,8 @@
     <meta name="page" content="404" />
     <meta name="section_name" content="Error" />
     <meta name="page_name" content="Error 404: Page Not Found" />
-    <meta name="show_navbar" content="true" />
-    <meta name="show_navbar_page" content="true" />
+    <meta name="show_breadcrumbs" content="true" />
+    <meta name="show_page_breadcrumbs" content="true" />
     <title>Error 404</title>
   </head>
 
