--- a/pages/template.inc.html
+++ b/pages/template.inc.html
@@ -8,8 +8,8 @@
     <meta name="page" content="random_page" />
     <meta name="section_name" content="Random Section" />
     <meta name="page_name" content="Random Page" />
-    <meta name="show_navbar" content="true" />
-    <meta name="show_navbar_page" content="true" />
+    <meta name="show_breadcrumbs" content="true" />
+    <meta name="show_page_breadcrumbs" content="true" />
     <title>Page Template</title>
   </head>
 
