--- a/pages/home.inc.html
+++ b/pages/home.inc.html
@@ -8,8 +8,8 @@
     <meta name="page" content="home" />
     <meta name="section_name" content="" />
     <meta name="page_name" content="Home" />
-    <meta name="show_navbar" content="false" />
-    <meta name="show_navbar_page" content="false" />
+    <meta name="show_breadcrumbs" content="false" />
+    <meta name="show_page_breadcrumbs" content="false" />
     <title></title>
   </head>
 
