--- a/pages/oss/oss.inc.html
+++ b/pages/oss/oss.inc.html
@@ -8,8 +8,8 @@
     <meta name="page" content="oss" />
     <meta name="section_name" content="Operating Systems" />
     <meta name="page_name" content="Operating Systems" />
-    <meta name="show_navbar" content="true" />
-    <meta name="show_navbar_page" content="false" />
+    <meta name="show_breadcrumbs" content="true" />
+    <meta name="show_page_breadcrumbs" content="false" />
     <title>Operating Systems</title>
   </head>
 
