--- a/pages/parts/parts.inc.html
+++ b/pages/parts/parts.inc.html
@@ -8,8 +8,8 @@
     <meta name="page" content="parts" />
     <meta name="section_name" content="Parts" />
     <meta name="page_name" content="Parts" />
-    <meta name="show_navbar" content="true" />
-    <meta name="show_navbar_page" content="false" />
+    <meta name="show_breadcrumbs" content="true" />
+    <meta name="show_page_breadcrumbs" content="false" />
     <title>Parts</title>
   </head>
 
