--- a/pages/error/404.inc.html
+++ b/pages/error/404.inc.html
@@ -9,7 +9,7 @@
     <meta name="section_name" content="Error" />
     <meta name="page_name" content="Error 404: Page Not Found" />
     <meta name="show_breadcrumbs" content="true" />
-    <meta name="show_page_breadcrumbs" content="true" />
+    <meta name="show_page_breadcrumb" content="true" />
     <title>Error 404</title>
   </head>
 
