--- a/pages/template.inc.html
+++ b/pages/template.inc.html
@@ -9,7 +9,7 @@
     <meta name="section_name" content="Random Section" />
     <meta name="page_name" content="Random Page" />
     <meta name="show_breadcrumbs" content="true" />
-    <meta name="show_page_breadcrumbs" content="true" />
+    <meta name="show_page_breadcrumb" content="true" />
     <title>Page Template</title>
   </head>
 
