--- a/pages/assembly/assembly.inc.html
+++ b/pages/assembly/assembly.inc.html
@@ -9,7 +9,7 @@
     <meta name="section_name" content="Assembling the PC" />
     <meta name="page_name" content="Assembling the PC" />
     <meta name="show_breadcrumbs" content="true" />
-    <meta name="show_page_breadcrumbs" content="false" />
+    <meta name="show_page_breadcrumb" content="false" />
     <title>Assembling the PC</title>
   </head>
 
