--- a/pages/home.inc.html
+++ b/pages/home.inc.html
@@ -9,7 +9,7 @@
     <meta name="section_name" content="" />
     <meta name="page_name" content="Home" />
     <meta name="show_breadcrumbs" content="false" />
-    <meta name="show_page_breadcrumbs" content="false" />
+    <meta name="show_page_breadcrumb" content="false" />
     <title></title>
   </head>
 
