--- a/pages/oss/oss.inc.html
+++ b/pages/oss/oss.inc.html
@@ -9,7 +9,7 @@
     <meta name="section_name" content="Operating Systems" />
     <meta name="page_name" content="Operating Systems" />
     <meta name="show_breadcrumbs" content="true" />
-    <meta name="show_page_breadcrumbs" content="false" />
+    <meta name="show_page_breadcrumb" content="false" />
     <title>Operating Systems</title>
   </head>
 
