--- a/pages/parts/parts.inc.html
+++ b/pages/parts/parts.inc.html
@@ -9,7 +9,7 @@
     <meta name="section_name" content="Parts" />
     <meta name="page_name" content="Parts" />
     <meta name="show_breadcrumbs" content="true" />
-    <meta name="show_page_breadcrumbs" content="false" />
+    <meta name="show_page_breadcrumb" content="false" />
     <title>Parts</title>
   </head>
 
