--- a/index.html
+++ b/index.html
@@ -102,6 +102,7 @@
 
         <main id="content" />
       </div>
+	    Search: <input type="text" name="fName" id="fName"><br>
     </div>
       <div class="site-footer-container">
         <div class="site-footer">
