wrong id on textinput for search

--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
           <div class="site-footer-box">
             <p><b>About</b></p>
             <p><i>Lorem ipsum dolor sit amet</i></p>
-			Search: <input type="text" name="fName" id="fName"><br>
+			<input type="text" name="search" placeholder="Search.." id="search"><br>
           </div>
 
           <div class="site-footer-box">
